fixed realtime exec deprecated method